[package]
name = "link"
version = "0.1.0"
edition = "2024"
description = "WebAssembly library for lightning-fast Link component."
repository = "https://github.com/sxperlinx/atora"
license = "MIT"
license-file = "../../../LICENSE"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = '0.2.100'