[package]
name = "url-tools"
version = "0.1.0"
edition = "2021"
description = "WebAssembly URL manipulation and parsing utilities."
repository = "https://github.com/sxpersxnic/atora"
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]
wee_alloc = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"

# Core WASM utilities
js-sys = "0.3.77"
web-sys = "0.3.77"

# URL parsing
url = "2.5.4"

# Error handling
thiserror = "2.0.7"
anyhow = "1.0.95"

# Memory allocator for WASM
wee_alloc = { version = "0.4.5", optional = true }
